[package]
name = "system-backup"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/system-backup"
repository = "https://github.com/adam-gaia/system-backup"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "macros", "process"] }
which = "6.0.3"
thiserror = "1.0.63"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
toml = "0.8.19"
directories = "5.0.1"
jiff = "0.1.13"
gethostname = "0.5.0"
ignore = "0.4.23"
globset = "0.4.15"
lazy_static = "1.5.0"
varpath = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
